# didww-api-3-python-sdk

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
examples/: README.md  address_verifications.py  balance.py  capacity_pools.py  client_factory.py  countries.py  did_groups.py  did_history.py  did_reservations.py  did_trunk_assignment.py  dids.py  emergency_calling_services.py  emergency_requirement_validations.py  emergency_requirements.py  emergency_scenario.py  emergency_verifications.py  exports.py  identity_address_proofs.py  orders.py  orders_all_item_types.py  orders_available_dids.py  orders_capacity.py  orders_emergency.py  orders_nanpa.py  orders_reservation_dids.py  orders_sku.py  regions.py  shared_capacity_groups.py  trunks.py  upload_file.py  voice_in_trunk_groups.py  voice_in_trunks.py  voice_out_trunks.py
scripts/: convert_fixtures.py
src/didww/: __init__.py  client.py  configuration.py  encrypt.py  enums.py  exceptions.py  query_params.py
tests/: conftest.py  test_client.py  test_encrypt.py  test_enums.py  test_query_params.py  test_request_validator.py  test_serialization.py
tests/resources/: test_address.py  test_address_requirement.py  test_address_requirement_validation.py  test_address_verification.py  test_area.py  test_available_did.py  test_balance.py  test_capacity_pool.py  test_city.py  test_country.py  test_did.py  test_did_group.py  test_did_group_type.py  test_did_history.py  test_did_reservation.py  test_emergency_calling_service.py  test_emergency_requirement.py  test_export.py  (+20 more)
(+164 files in other folders)
