[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "didww"
version = "1.0.0"
description = "Python SDK for DIDWW API v3"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jsonapi-requests>=0.6.2",
    "requests>=2.28.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "vcrpy>=6.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]